[package]
name = "forge-benches"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
forge-vesting  = { path = "../contracts/forge-vesting" }
forge-stream   = { path = "../contracts/forge-stream" }
forge-multisig = { path = "../contracts/forge-multisig" }
forge-governor = { path = "../contracts/forge-governor" }
forge-oracle   = { path = "../contracts/forge-oracle" }
soroban-sdk    = { version = "21.7.6", features = ["testutils"] }
